--- a/demo-application/src/main/resources/application.yml
+++ b/demo-application/src/main/resources/application.yml
@@ -11,6 +11,9 @@ spring:
     username: user
     password: password
   jpa:
+    database-platform: org.hibernate.dialect.PostgreSQLDialect
+    hibernate:
+      ddl-auto: create
     properties:
       hibernate:
-        default_schema: 'demo_application'
+        default_schema: demo_application
