--- a/demo-application/src/main/resources/application.yml
+++ b/demo-application/src/main/resources/application.yml
@@ -13,7 +13,7 @@ spring:
   jpa:
     database-platform: org.hibernate.dialect.PostgreSQLDialect
     hibernate:
-      ddl-auto: create
+      ddl-auto: none
     properties:
       hibernate:
         default_schema: demo_application
