--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -6,3 +6,5 @@ spring:
       server:
         git:
           uri: https://github.com/craigmiller160/practice-spring-cloud-config-store
+          search-paths:
+            - '*service'
