--- a/auth-server/src/main/resources/application.yml
+++ b/auth-server/src/main/resources/application.yml
@@ -1,1 +1,16 @@
-
+server:
+  port: 8082
+spring:
+  security:
+    user:
+      name: krish
+      password: krish123
+      roles: ADMIN,USER
+security:
+  oauth2:
+    client:
+      client-id: mobile
+      client-secret: pin
+      access-token-validity-seconds: 3600
+      authorized-grant-types: refresh_token,authorization_code,password,client_credentials
+      scope: READ,WRITE
