Configured some more stuff for auth-server

--- a/auth-server/src/main/resources/application.yml
+++ b/auth-server/src/main/resources/application.yml
@@ -14,3 +14,5 @@ security:
       access-token-validity-seconds: 3600
       authorized-grant-types: refresh_token,authorization_code,password,client_credentials
       scope: READ,WRITE
+    authorization:
+      check-token-access: permitAll # Access without client id/secret
