--- a/authorization-server/src/main/resources/application.yml
+++ b/authorization-server/src/main/resources/application.yml
@@ -2,9 +2,8 @@ server:
   port: 8083
 spring:
   application:
-    name: profile-service
+    name: auth-server
 logging:
   level:
-    org:
-      hibernate:
-        type: trace
+    org.hibernate: DEBUG
+    org.springframework.security: DEBUG
