Got authentication working

--- a/authorization-server/src/main/resources/application.yml
+++ b/authorization-server/src/main/resources/application.yml
@@ -5,5 +5,5 @@ spring:
     name: auth-server
 logging:
   level:
-    org.hibernate: DEBUG
+    org.hibernate: ERROR
     org.springframework.security: DEBUG
