--- a/profile-service/src/main/resources/application.yml
+++ b/profile-service/src/main/resources/application.yml
@@ -3,3 +3,10 @@ server:
 spring:
   application:
     name: profile-service
+security:
+  oauth2:
+    resource:
+      token-info-uri: http://localhost:8083/oauth/check_token
+    client:
+      client-id: mobile
+      client-secret: pin
