--- a/auth-code-flow-ui/src/main/resources/application.yml
+++ b/auth-code-flow-ui/src/main/resources/application.yml
@@ -1,2 +1,11 @@
 server:
   port: 8084
+security:
+  oauth2:
+    client:
+      client-id: mobile
+      client-secret: pin
+      user-authorization-uri: http://localhost:8083/oauth/authorize
+      access-token-uri: http://localhost:8083/oauth/token
+    resource:
+      token-info-uri: http://localhost:8083/oauth/check_token
