Got the basic auth working for config server

--- a/config-server/src/main/resources/application.yml
+++ b/config-server/src/main/resources/application.yml
@@ -9,3 +9,6 @@ spring:
           username: craigmiller160@gmail.com
           search-paths:
             - '*'
+logging:
+  level:
+    org.springframework.security: DEBUG
