--- a/authorization-server/src/main/resources/bootstrap.yml
+++ b/authorization-server/src/main/resources/bootstrap.yml
@@ -3,3 +3,7 @@ spring:
     config:
       uri: http://localhost:8191
       profile: dev
+      name: auth-server
+      fail-fast: true
+      username: user
+      password: password
