Configured profile-service to use new oauth2 config

--- a/profile-service/src/main/resources/bootstrap.yml
+++ b/profile-service/src/main/resources/bootstrap.yml
@@ -3,7 +3,7 @@ spring:
     config:
       uri: http://localhost:8191
       profile: dev
-      name: profile-service
+      name: profile-service,oauth2
       fail-fast: true
       username: user
       password: password
