Moved everything back to datasource config

--- a/authorization-server/src/main/resources/application.yml
+++ b/authorization-server/src/main/resources/application.yml
@@ -6,4 +6,4 @@ spring:
 logging:
   level:
     org.hibernate: ERROR
-    org.springframework.security: ERROR
+    org.springframework.security: DEBUG
