--- a/profile-service/src/main/resources/application.yml
+++ b/profile-service/src/main/resources/application.yml
@@ -3,8 +3,6 @@ server:
 spring:
   application:
     name: profile-service
-security:
-  oauth2:
-    resource:
-      jwt:
-        key-value: 123
+logging:
+  level:
+    org.springframework.security: DEBUG
