--- a/authorization-server/src/main/resources/application.yml
+++ b/authorization-server/src/main/resources/application.yml
@@ -7,3 +7,8 @@ logging:
   level:
     org.hibernate: ERROR
     org.springframework.security: DEBUG
+management:
+  endpoints:
+    web:
+      exposure:
+        include: '*'
